--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,11 +11,7 @@ set -g status-bg black
 set -g status-fg white
 
 # default window title colors
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg white
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style bg=black,fg=white
 
 # active window title colors
-set-window-option -g window-status-current-bg white
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-attr dim
+set-window-option -g window-status-current-style bg=white,fg=black
