--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,11 @@ set -g default-terminal "screen-256color"
 # default statusbar colors
 set -g status-bg black
 set -g status-fg white
+set -g status-right "#H %H:%M %Y-%m-%d "
 
 # default window title colors
 set-window-option -g window-status-style bg=black,fg=white
 
 # active window title colors
-set-window-option -g window-status-current-style bg=white,fg=black
+set-window-option -g window-status-current-style bg=black,fg=green
+
