--- a/sway/config
+++ b/sway/config
@@ -79,8 +79,11 @@ bindsym $mod+Mod1+l exec swaylock -c 000000
 input "*" {
     dwt enabled
     tap enabled
-    natural_scroll enabled
     middle_emulation enabled
+}
+
+input "1739:30382:DLL0704:01_06CB:76AE_Touchpad" {
+    natural_scroll enabled
 }
 
 ### Key bindings
